syntax = "proto3";

package messaging;

message Message {
	string type = 1;
	oneof payload {
		Command command = 2;
		Input input = 3;
		Output output = 4;
		Exit exit = 5;
	}
}

message Command {
	string name = 1;
	repeated string args = 2;
	repeated string environ = 3;
}

message Output {
	bytes output = 1;
}

message Input {
	bytes stdin = 1;
}

message Exit {
	int32 exit_status = 1;
}
